--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -34,9 +34,32 @@ jobs:
       - draw
     runs-on: ubuntu-latest
     steps:
-      - name: init release-please
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: firmware
+          path: firmware
+      - name: Create Release
+        id: create_release
         uses: googleapis/release-please-action@v4
         with:
           config-file: .github/release-please-config.json
           manifest-file: .github/.release-please-manifest.json
           token: ${{ secrets.PAT }}
+      - name: Upload Release Assets
+        if: ${{ steps.create_release.outputs.release_created }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
+        run: |
+          release_id=$(jq --raw-output .release.id "${{ steps.create_release.outputs.release_pr }}")
+          for file in firmware/*; do
+            curl -L \
+              -X POST \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer $GITHUB_TOKEN" \
+              -H "Content-Type: application/octet-stream" \
+              "https://uploads.github.com/repos/${{ github.repository }}/releases/$release_id/assets?name=$(basename $file)" \
+              --data-binary "@$file"
+          done
